--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800,900|Rochester" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
     <!-- myCSS -->
     <link rel="stylesheet" type="text/css" href="fullpage/jquery.fullPage.css" />
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -34,7 +36,7 @@
             <div class="row">
                 <div class="col text-center">
                     <div class="info">
-                        10. 06. 2018
+                        October 6 2018
                     </div>
                     <div class="info">
                         China Blue, New York
@@ -44,30 +46,35 @@
             <div class="row">
                 <div class="col text-center">
                     <a href="" class="rsvp">
-                            RSVP
-                        </a>
+                       RSVP
+                    </a>
                 </div>
             </div>
         </div>
         <div class="section story">
-            <div class="container">
-                <div class="row title-row">
-                    <div class="col text-center ">
-                        <div class="small-title display-control">
-                            Our Story
-                        </div>
+            <div class="row title-row">
+                <div class="col text-center ">
+                    <div class="small-title display-control">
+                        Our Story
                     </div>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="col-10 text-center">
-                        It all started on Coffee Meets Bagel.
-                        <br> Two "bagels" met each other over tea at Cha An.
-                        <br> It started off a bit awkward when Daniel's first words were,
-                        <br> "glad you're as cute as your photos in person."
-                        <br> *crickets*
-                        <br> Luckily, Daniel and Xintong embraced the awkwardness of the first few minutes
-                        <br>and the rest is history ...
-                    </div>
+            </div>
+            <div class="row text-center justify-content-center">
+                <div class="col-md-6 col-sm-9 col-10">
+                    It all started on Coffee Meets Bagel.
+                    <br>
+                    <img src="img/emoji-0.png" class="emoji" alt="">
+                    <br> Two "bagels" met each other over tea at Cha-An (茶庵). It started off a bit awkward when Daniel's first words were, "glad you're as cute as your photos in person."
+                    <br> *crickets*
+                    <br>
+                    <img src="img/emoji-1.png" class="emoji" alt="">
+                    <img src="img/emoji-2.png" class="emoji" alt="">
+                    <img src="img/emoji-3.png" class="emoji" alt="">
+                    <br> Luckily, Daniel and Xintong embraced the awkwardness of the first few minutes and the rest is history ...
+                    <br>
+                    <img src="img/emoji-4.png" class="emoji" alt="">
+                    <img src="img/emoji-5.png" class="emoji" alt="">
+                    <img src="img/emoji-6.png" class="emoji" alt="">
                 </div>
             </div>
         </div>
@@ -80,10 +87,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col text-center">
+                <div class="row justify-content-center">
+                    <div class="col-10 text-center">
                         <div class="info">
-                            October 6th, 2018 at 4pm
+                            October 6 2018 4pm
                         </div>
                         <div class="info">
                             China Blue, 135 Watts St, New York, NY 10013
@@ -136,7 +143,7 @@
                             6:00pm
                         </div>
                         <div class="to-do ">
-                            Dim Sum & Cocktail Reception
+                            Reception
                         </div>
                     </div>
                 </div>
@@ -158,13 +165,13 @@
                             8:30pm
                         </div>
                         <div class="to-do ">
-                            Party & Dancing
+                            Dancing
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="section people ">
+        <div class="section people">
             <div class="row title-row ">
                 <div class="col text-center ">
                     <div class="small-title display-control ">
@@ -173,48 +180,48 @@
                 </div>
             </div>
             <div class="row justify-content-center ">
-                <div class="col-md-2 col-sm-3 text-center item ">
+                <div class="col-md-2 col-sm-2 text-center item ">
                     <img src="img/cate.jpg " alt=" ">
                     <div class="name ">
-                        First Last
+                        Adrin Lin
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-3 text-center item ">
+                <div class="col-md-2 col-sm-2 text-center item ">
                     <img src="img/siying.jpg " alt=" ">
                     <div class="name ">
-                        First Last
+                        Cate Wang
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-3 text-center item ">
+                <div class="col-md-2 col-sm-2 text-center item ">
                     <img src="img/jonathon.jpg " alt=" ">
                     <div class="name ">
-                        First Last
+                        Corey Lerch
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center ">
-                <div class="col-md-2 col-sm-3 text-center item ">
+                <div class="col-md-2 col-sm-2 text-center item ">
                     <img src="img/cate.jpg " alt=" ">
                     <div class="name ">
-                        First Last
+                        Jem Atlas
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-3 text-center item ">
+                <div class="col-md-2 col-sm-2 text-center item ">
                     <img src="img/cate.jpg " alt=" ">
                     <div class="name ">
-                        First Last
+                        Jonathon Zhang
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-3 text-center item ">
+                <div class="col-md-2 col-sm-2 text-center item ">
                     <img src="img/cate.jpg " alt=" ">
                     <div class="name ">
-                        First Last
+                        Patrick Coleman
                     </div>
                 </div>
-                <div class="col-md-2 col-sm-3 text-center item ">
+                <div class="col-md-2 col-sm-2 text-center item ">
                     <img src="img/cate.jpg " alt=" ">
                     <div class="name ">
-                        First Last
+                        Siying Du
                     </div>
                 </div>
             </div>
