--- a/index.html
+++ b/index.html
@@ -181,19 +181,19 @@
             </div>
             <div class="row justify-content-center ">
                 <div class="col-md-2 col-sm-2 text-center item ">
-                    <img src="img/cate.jpg " alt=" ">
+                    <img src="img/img.jpg " alt=" ">
                     <div class="name ">
                         Adrin Lin
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-2 text-center item ">
-                    <img src="img/siying.jpg " alt=" ">
+                    <img src="img/img.jpg " alt=" ">
                     <div class="name ">
                         Cate Wang
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-2 text-center item ">
-                    <img src="img/jonathon.jpg " alt=" ">
+                    <img src="img/img.jpg " alt=" ">
                     <div class="name ">
                         Corey Lerch
                     </div>
@@ -201,25 +201,25 @@
             </div>
             <div class="row justify-content-center ">
                 <div class="col-md-2 col-sm-2 text-center item ">
-                    <img src="img/cate.jpg " alt=" ">
+                    <img src="img/img.jpg " alt=" ">
                     <div class="name ">
                         Jem Atlas
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-2 text-center item ">
-                    <img src="img/cate.jpg " alt=" ">
+                    <img src="img/img.jpg " alt=" ">
                     <div class="name ">
                         Jonathon Zhang
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-2 text-center item ">
-                    <img src="img/cate.jpg " alt=" ">
+                    <img src="img/img.jpg " alt=" ">
                     <div class="name ">
                         Patrick Coleman
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-2 text-center item ">
-                    <img src="img/cate.jpg " alt=" ">
+                    <img src="img/img.jpg " alt=" ">
                     <div class="name ">
                         Siying Du
                     </div>
