--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <div class="col-md-2 col-sm-2 text-center item ">
                     <img src="img/img.jpg " alt=" ">
                     <div class="name ">
-                        Adrain Lin
+                        Adrian Lin
                     </div>
                 </div>
                 <div class="col-md-2 col-sm-2 text-center item ">
