--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800,900|Rochester" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900" rel="stylesheet">
     <!-- myCSS -->
     <link rel="stylesheet" type="text/css" href="fullpage/jquery.fullPage.css" />
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -20,61 +20,62 @@
 <body>
     <div id="fullpage">
         <div class="section home">
-            <div class="row title-row">
-                <div class="col text-center">
-                    <div class="big-title display-control">
-                        Xintong
-                    </div>
-                    <div class="title-icon display-control">
-                        <img src="img/icon_heart.svg" alt="">
-                    </div>
-                    <div class="big-title display-control ">
-                        Daniel
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col text-center">
-                    <div class="info">
-                        October 6 2018
-                    </div>
-                    <div class="info">
-                        China Blue, New York
+            <div class="container">
+                <div class="row title-row">
+                    <div class="col text-center">
+                        <div class="big-title display-control">
+                            Xintong
+                        </div>
+                        <div class="title-icon display-control">
+                            <img src="img/icon_heart.svg" alt="">
+                        </div>
+                        <div class="big-title display-control ">
+                            Daniel
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col text-center">
-                    <a href="" class="rsvp">
+                <div class="row">
+                    <div class="col text-center">
+                        <div class="info">
+                            October 6 2018, New York
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col text-center">
+                        <a href="" class="rsvp">
                        RSVP
                     </a>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="section story">
-            <div class="row title-row">
-                <div class="col text-center ">
-                    <div class="small-title display-control">
-                        Our Story
+            <div class="container">
+                <div class="row title-row">
+                    <div class="col text-center ">
+                        <div class="small-title display-control">
+                            Our Story
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row text-center justify-content-center">
-                <div class="col-md-6 col-sm-9 col-10">
-                    It all started on Coffee Meets Bagel.
-                    <br>
-                    <img src="img/emoji-0.png" class="emoji" alt="">
-                    <br> Two "bagels" met each other over tea at Cha-An (茶庵). It started off a bit awkward when Daniel's first words were, "glad you're as cute as your photos in person."
-                    <br> *crickets*
-                    <br>
-                    <img src="img/emoji-1.png" class="emoji" alt="">
-                    <img src="img/emoji-2.png" class="emoji" alt="">
-                    <img src="img/emoji-3.png" class="emoji" alt="">
-                    <br> Luckily, Daniel and Xintong embraced the awkwardness of the first few minutes and the rest is history ...
-                    <br>
-                    <img src="img/emoji-4.png" class="emoji" alt="">
-                    <img src="img/emoji-5.png" class="emoji" alt="">
-                    <img src="img/emoji-6.png" class="emoji" alt="">
+                <div class="row text-center justify-content-center">
+                    <div class="col-md-6 col-sm-9 col-10">
+                        It all started on Coffee Meets Bagel.
+                        <br>
+                        <img src="img/emoji-0.png" class="emoji" alt="">
+                        <br> Two "bagels" met each other over tea at Cha-An (茶庵). It started off a bit awkward when Daniel's first words were, "glad you're as cute as your photos in person."
+                        <br> *crickets*
+                        <br>
+                        <img src="img/emoji-1.png" class="emoji" alt="">
+                        <img src="img/emoji-2.png" class="emoji" alt="">
+                        <img src="img/emoji-3.png" class="emoji" alt="">
+                        <br> Luckily, Daniel and Xintong embraced the awkwardness of the first few minutes and the rest is history ...
+                        <br>
+                        <img src="img/emoji-4.png" class="emoji" alt="">
+                        <img src="img/emoji-5.png" class="emoji" alt="">
+                        <img src="img/emoji-6.png" class="emoji" alt="">
+                    </div>
                 </div>
             </div>
         </div>
@@ -117,111 +118,126 @@
             </div>
         </div>
         <div class="section details">
-            <div class="row title-row">
-                <div class="col text-center ">
-                    <div class="small-title display-control">
-                        Details
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-2 text-center event">
-                    <img src="img/ceremony.png" alt="">
-                    <div>
-                        <div class="time ">
-                            5:20pm
-                        </div>
-                        <div class="to-do ">
-                            Ceremony
+            <div class="container">
+                <div class="row title-row">
+                    <div class="col text-center ">
+                        <div class="small-title display-control">
+                            Details
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-2 text-center event ">
-                    <img src="img/cocktail.png " alt=" ">
-                    <div>
-                        <div class="time ">
-                            6:00pm
-                        </div>
-                        <div class="to-do ">
-                            Reception
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-2 text-center event ">
-                    <img src="img/dinner.png " alt=" ">
-                    <div>
-                        <div class="time ">
-                            7:00pm
-                        </div>
-                        <div class="to-do ">
-                            Dinner
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-2 text-center event">
+                        <img src="img/ceremony.png" alt="">
+                        <div>
+                            <div class="time ">
+                                5:20pm
+                            </div>
+                            <div class="to-do ">
+                                Ceremony
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-12 col-md-2 text-center event ">
-                    <img src="img/party.png " alt=" ">
-                    <div>
-                        <div class="time ">
-                            8:30pm
+                    <div class="col-12 col-md-2 text-center event ">
+                        <img src="img/cocktail.png " alt=" ">
+                        <div>
+                            <div class="time ">
+                                6:00pm
+                            </div>
+                            <div class="to-do ">
+                                Reception
+                            </div>
                         </div>
-                        <div class="to-do ">
-                            Dancing
+                    </div>
+                    <div class="col-12 col-md-2 text-center event ">
+                        <img src="img/dinner.png " alt=" ">
+                        <div>
+                            <div class="time ">
+                                7:00pm
+                            </div>
+                            <div class="to-do ">
+                                Dinner
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-2 text-center event ">
+                        <img src="img/party.png " alt=" ">
+                        <div>
+                            <div class="time ">
+                                8:30pm
+                            </div>
+                            <div class="to-do ">
+                                Dancing
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="section people">
-            <div class="row title-row ">
-                <div class="col text-center ">
-                    <div class="small-title display-control ">
-                        Wedding Team
+            <div class="container">
+                <div class="row title-row ">
+                    <div class="col text-center ">
+                        <div class="small-title display-control ">
+                            Wedding Team
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center ">
+                    <div class="col-md-2 col-sm-2 text-center item ">
+                        <img src="img/img.jpg " alt=" ">
+                        <div class="name ">
+                            Adrian Lin
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-sm-2 text-center item ">
+                        <img src="img/img.jpg " alt=" ">
+                        <div class="name ">
+                            Cate Wang
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-sm-2 text-center item ">
+                        <img src="img/img.jpg " alt=" ">
+                        <div class="name ">
+                            Corey Lerch
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center ">
+                    <div class="col-md-2 col-sm-2 text-center item ">
+                        <img src="img/img.jpg " alt=" ">
+                        <div class="name ">
+                            Jem Atlas
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-sm-2 text-center item ">
+                        <img src="img/img.jpg " alt=" ">
+                        <div class="name ">
+                            Jonathan Zhang
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-sm-2 text-center item ">
+                        <img src="img/img.jpg " alt=" ">
+                        <div class="name ">
+                            Patrick Coleman
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-sm-2 text-center item ">
+                        <img src="img/siying.jpg " alt=" ">
+                        <div class="name ">
+                            Siying Du
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center ">
-                <div class="col-md-2 col-sm-2 text-center item ">
-                    <img src="img/img.jpg " alt=" ">
-                    <div class="name ">
-                        Adrian Lin
-                    </div>
-                </div>
-                <div class="col-md-2 col-sm-2 text-center item ">
-                    <img src="img/img.jpg " alt=" ">
-                    <div class="name ">
-                        Cate Wang
-                    </div>
-                </div>
-                <div class="col-md-2 col-sm-2 text-center item ">
-                    <img src="img/img.jpg " alt=" ">
-                    <div class="name ">
-                        Corey Lerch
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center ">
-                <div class="col-md-2 col-sm-2 text-center item ">
-                    <img src="img/img.jpg " alt=" ">
-                    <div class="name ">
-                        Jem Atlas
-                    </div>
-                </div>
-                <div class="col-md-2 col-sm-2 text-center item ">
-                    <img src="img/img.jpg " alt=" ">
-                    <div class="name ">
-                        Jonathon Zhang
-                    </div>
-                </div>
-                <div class="col-md-2 col-sm-2 text-center item ">
-                    <img src="img/img.jpg " alt=" ">
-                    <div class="name ">
-                        Patrick Coleman
-                    </div>
-                </div>
-                <div class="col-md-2 col-sm-2 text-center item ">
-                    <img src="img/img.jpg " alt=" ">
-                    <div class="name ">
-                        Siying Du
+        </div>
+        <div class="section information">
+            <div class="container">
+                <div class="row title-row ">
+                    <div class="col text-center">
+                        <div class="small-title">
+                            Information
+                        </div>
                     </div>
                 </div>
             </div>
