--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800,900|Rochester" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Sorts+Mill+Goudy:400,400i" rel="stylesheet"> -->
+
     <!-- myCSS -->
     <link rel="stylesheet" type="text/css" href="fullpage/jquery.fullPage.css" />
     <link rel="stylesheet" type="text/css" href="main.css">
