--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrapt css-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- google font -->
-    <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800,900|Rochester" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800,900|Rochester" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900" rel="stylesheet">
     <!-- <link href="https://fonts.googleapis.com/css?family=Sorts+Mill+Goudy:400,400i" rel="stylesheet"> -->
