--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     <!-- Bootstrapt css-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- google font -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,600,700,800,900|Rochester" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Goudy+Bookletter+1911" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900" rel="stylesheet">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Sorts+Mill+Goudy:400,400i" rel="stylesheet"> -->
-
+    <!-- Add the new slick-theme.css if you want the default styling -->
+    <!-- <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" /> -->
     <!-- myCSS -->
     <link rel="stylesheet" type="text/css" href="fullpage/jquery.fullPage.css" />
     <link rel="stylesheet" type="text/css" href="main.css">
@@ -67,7 +66,7 @@
                         <br>
                         <img src="img/emoji-0.png" class="emoji" alt="">
                         <br> Two "bagels" met each other over tea at Cha-An (茶庵). It started off a bit awkward when Daniel's first words were, "glad you're as cute as your photos in person."
-                        <br> *crickets*
+                        <br> <span class="light-text">*crickets*</span>
                         <br>
                         <img src="img/emoji-1.png" class="emoji" alt="">
                         <img src="img/emoji-2.png" class="emoji" alt="">
@@ -110,10 +109,10 @@
                 <div class="row">
                     <div class="col text-center">
                         <div class="link">
-                            <a href="https://www.google.com/maps/place/China+Blue/@40.7240204,-74.0121551,17z/data=!3m1!4b1!4m5!3m4!1s0x89c259f4798c3d43:0xd9fc6679f6bc07c8!8m2!3d40.7240204!4d-74.0099664" target="_blank"><i class="fas fa-map-pin"></i> View map</a>
+                            <a href="https://www.google.com/maps/place/China+Blue/@40.7240204,-74.0121551,17z/data=!3m1!4b1!4m5!3m4!1s0x89c259f4798c3d43:0xd9fc6679f6bc07c8!8m2!3d40.7240204!4d-74.0099664" target="_blank">View map</a>
                         </div>
                         <div class="link">
-                            <a href=""><i class="fas fa-utensils"></i> View menu</a>
+                            <a href="">View menu</a>
                         </div>
                     </div>
                 </div>
@@ -189,19 +188,19 @@
                     <div class="col-md-3 col-sm-3 text-center item ">
                         <img src="img/img.jpg " alt=" ">
                         <div class="name ">
-                            Adrian Lin
+                            Adrian
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 text-center item ">
-                        <img src="img/img.jpg " alt=" ">
+                        <img src="img/cate.jpg " alt=" ">
                         <div class="name ">
-                            Cate Wang
+                            Cate
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 text-center item ">
-                        <img src="img/img.jpg " alt=" ">
+                        <img src="img/corey.jpg " alt=" ">
                         <div class="name ">
-                            Corey Lerch
+                            Corey
                         </div>
                     </div>
                 </div>
@@ -209,36 +208,49 @@
                     <div class="col-md-3 col-sm-3 text-center item ">
                         <img src="img/img.jpg " alt=" ">
                         <div class="name ">
-                            Jem Atlas
+                            Jem
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 text-center item ">
-                        <img src="img/img.jpg " alt=" ">
+                        <img src="img/jonathan.jpg " alt=" ">
                         <div class="name ">
-                            Jonathan Zhang
+                            Jonathan
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 text-center item ">
-                        <img src="img/img.jpg " alt=" ">
+                        <img src="img/patrick.jpg " alt=" ">
                         <div class="name ">
-                            Patrick Coleman
+                            Patrick
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 text-center item ">
                         <img src="img/siying.jpg " alt=" ">
                         <div class="name ">
-                            Siying Du
+                            Siying
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        
         <div class="section information">
             <div class="container">
-                <div class="row title-row ">
-                    <div class="col text-center">
-                        <div class="small-title">
-                            Information
+                <div class="row title-row justify-content-center ">
+                    <div class="col-10 text-center">
+                        <div class="xsmall-title">
+                            Adventures in NYC
+                        </div>
+                        <div class="light-text">
+                            Here are a few things we've experienced that we really like and would love to share them with you:
+                        </div>
+                        <div class="link">
+                            <a href="https://www.paradisoescape.com/" target="_blank">Paradiso Escape</a>
+                        </div>
+                        <div class="link">
+                            <a href="https://www.unarthodox.com/" target="_blank">Unarthodox</a>
+                        </div>
+                        <div class="link">
+                            <a href="http://www.avantgardennyc.com/" target="_blank">Avant garden</a>
                         </div>
                     </div>
                 </div>
