--- a/index.html
+++ b/index.html
@@ -187,57 +187,63 @@
                 <div class="row justify-content-center ">
                     <div class="col-md-3 col-sm-3 text-center item ">
                         <img src="img/img.jpg " alt=" ">
-                        <div class="name ">
+                        <span class="name">
                             Adrian
-                        </div>
+                        </span>
+                        <span class="family-name name">Lin</span>
                     </div>
                     <div class="col-md-3 col-sm-3 text-center item ">
                         <img src="img/cate.jpg " alt=" ">
-                        <div class="name ">
+                        <span class="name ">
                             Cate
-                        </div>
+                        </span>
+                        <span class="family-name name">Wang</span>
                     </div>
                     <div class="col-md-3 col-sm-3 text-center item ">
                         <img src="img/corey.jpg " alt=" ">
-                        <div class="name ">
+                        <span class="name ">
                             Corey
-                        </div>
+                        </span>
+                        <span class="family-name name">Lerch</span>
                     </div>
                 </div>
                 <div class="row justify-content-center ">
                     <div class="col-md-3 col-sm-3 text-center item ">
                         <img src="img/img.jpg " alt=" ">
-                        <div class="name ">
+                        <span class="name ">
                             Jem
-                        </div>
+                        </span>
+                        <span class="family-name name">Atlas</span>
                     </div>
                     <div class="col-md-3 col-sm-3 text-center item ">
                         <img src="img/jonathan.jpg " alt=" ">
-                        <div class="name ">
+                        <span class="name ">
                             Jonathan
-                        </div>
+                        </span>
+                        <span class="family-name name">Zhang</span>
                     </div>
                     <div class="col-md-3 col-sm-3 text-center item ">
                         <img src="img/patrick.jpg " alt=" ">
-                        <div class="name ">
+                        <span class="name ">
                             Patrick
-                        </div>
+                        </span>
+                        <span class="family-name name">Coleman</span>
                     </div>
                     <div class="col-md-3 col-sm-3 text-center item ">
                         <img src="img/siying.jpg " alt=" ">
-                        <div class="name ">
+                        <span class="name ">
                             Siying
-                        </div>
+                        </span>
+                        <span class="family-name name">Du</span>
                     </div>
                 </div>
             </div>
         </div>
-        
         <div class="section information">
             <div class="container">
                 <div class="row title-row justify-content-center ">
                     <div class="col-10 text-center">
-                        <div class="xsmall-title">
+                        <div class="small-title">
                             Adventures in NYC
                         </div>
                         <div class="light-text">
@@ -253,6 +259,9 @@
                             <a href="http://www.avantgardennyc.com/" target="_blank">Avant garden</a>
                         </div>
                     </div>
+                </div>
+                <div class="footer text-center">
+                    created by Xintong & Daniel with <img src="img/emoji-7.png" alt="">
                 </div>
             </div>
         </div>
