--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 </div>
                 <div class="row justify-content-center ">
                     <div class="col-md-3 col-sm-3 text-center item ">
-                        <img src="img/img.jpg " alt=" ">
+                        <img src="img/adrian.jpg " alt=" ">
                         <span class="name">
                             Adrian
                         </span>
