--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                             October 6 2018 4pm
                         </div>
                         <div class="info">
-                            China Blue, 135 Watts St, New York, NY 10013
+                            China Blue, 135 Watts St. New York NY 10013
                         </div>
                     </div>
                 </div>
