--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-12 col-md-2 text-center event">
+                    <div class="col-12 col-sm-2 col-md-2 text-center event">
                         <img src="img/ceremony.png" alt="">
                         <div>
                             <div class="time ">
@@ -139,7 +139,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-2 text-center event ">
+                    <div class="col-12 col-sm-2 col-md-2 text-center event ">
                         <img src="img/cocktail.png " alt=" ">
                         <div>
                             <div class="time ">
@@ -150,7 +150,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-2 text-center event ">
+                    <div class="col-12 col-sm-2 col-md-2 text-center event ">
                         <img src="img/dinner.png " alt=" ">
                         <div>
                             <div class="time ">
@@ -161,7 +161,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 col-md-2 text-center event ">
+                    <div class="col-12 col-sm-2 col-md-2 text-center event ">
                         <img src="img/party.png " alt=" ">
                         <div>
                             <div class="time ">
